--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </li>
                 </ul>
             </div>
-            </section>-->
+            </section>
 
             <!-- наша каманда-->
             <!--<section class="section-members">
@@ -278,7 +278,7 @@
             </div>
             </section>-->
             <!-- Постійні клієнти -->
-            <!--<section class="section-clients">
+           <section class="section-clients">
                 <div class="conteiner">
                 <h2 class="section-title">Постійні клієнти</h2>
                 <ul class="clients list" >
