--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </section>
             
             <!-- чим займаймося   what-doing -->
-            <!--<section class="section"> 
+            <section class="what-doing section"> 
                  <h2 class="section-title list">Чим ми займаємося</h2>
                 <div class="conteiner">
                 <ul class="list-imag" >
