--- a/index.html
+++ b/index.html
@@ -468,8 +468,9 @@
                 </button>
           
                 <ul class="mobile-menu">
-                  <li class="mobile-menu-item"><a href="" class="mobile-menu-link link">Студія</a></li>
-                  <li class="mobile-menu-item"><a href="" class="mobile-menu-link link">Портфоліо</a></li>
+                   <!--<li class="site-nav__item"><a class="link current" href= "./index.html">Студія</a> </li>--> 
+                    <li class="mobile-menu-item"><a  href="./index.html" class="mobile-menu-link link">Студія</a></li>
+                  <li class="mobile-menu-item"><a href="./portfolio.html" class="mobile-menu-link link">Портфоліо</a></li>
                   <li class="mobile-menu-item"><a href="" class="mobile-menu-link link">Контакти</a></li>
                   
                 </ul>
