--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
 
              </main>
              <!--футер-->
-             <!-- <footer class="footer">
+              <footer class="footer">
                 <div class="conteiner footer-conteiner">
                 <div class="conteiner">
-                <a class="logo-link" href="">Web<span class="logo-footer">Studio</span></a>
+                <a class="logo-link-footer" href="">Web<span class="logo-footer">Studio</span></a>
                 <address>
                     <ul class="address list">
                         <li class="street">м. Київ, пр-т Лесі Українки, 26</li>
@@ -335,7 +335,7 @@
 
 
 
-                    <div class="conteiner">
+                    <div class="conteiner">-->
                 <section class="addition">
                     <h3 class="add">Приєднуйтесь</h3>
                     <ul class="add__addition-list" >
