--- a/portfolio.html
+++ b/portfolio.html
@@ -236,7 +236,7 @@
       <!--футер-->
 
 
-     <!--  <footer class="footer">
+       <footer class="footer">
         <div class="conteiner footer-conteiner">
         <div class="conteiner">
         <a class="logo-link" href="">Web<span class="logo-footer">Studio</span></a>
