--- a/index.html
+++ b/index.html
@@ -488,13 +488,13 @@
                 </ul>
                 <ul class="mobile-social list">
                     <li class="mobile-social-item">
-                        <a href="" class="mobile-social-link link">Instagram</a>
+                        <a href="" class="mobile-social-link link">Instagram <span>|</span></a>
                     </li>
                     <li class="mobile-social-item">
-                        <a href="" class="mobile-social-link link">Twitter</a>
-                    </li>
+                        <a href="" class="mobile-social-link link">Twitter <span>|</span></a>
+                    </li> 
                     <li class="mobile-social-item">
-                        <a href="" class="mobile-social-link link">Facebook</a>
+                        <a href="" class="mobile-social-link link">Facebook <span>|</span></a>
                     </li>
                     <li class="mobile-social-item">
                         <a href="" class="mobile-social-link link">LinkedIn</a>
