--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </li>
                 </ul>
             </div>
-            </section>-->
+            </section>
             <!-- Постійні клієнти -->
            <section class="section-clients">
                 <div class="conteiner">
